# mics-skills

./: .gitignore  README.md  flake.nix  home-manager-common.nix  home-manager-new.nix  home-manager.nix  pyproject.toml  skills.nix
browser-cli/: BUGS.md  README.md  default.nix  pyproject.toml
browser-cli/browser_cli/: __init__.py  bridge.py  browsh.py  cli.py  client.py  config.py  paths.py
browser-cli/extension/: background.js  console-capture.js  content.js  eslint.config.js  global.d.ts  jsconfig.json  manifest.json  package.json
buildbot-pr-check/: README.md  default.nix  pyproject.toml
buildbot-pr-check/buildbot_pr_check/: __init__.py  build_status.py  buildbot_api.py  cli.py  exceptions.py  git.py  gitea_api.py  github_api.py  reporting.py  url_parser.py
buildbot-pr-check/skill/: SKILL.md
buildbot-pr-check/tests/: conftest.py  test_buildbot_api.py  test_cli.py
buildbot-pr-check/tests/fixtures/: br_103813_builds.json  br_103834_builds.json  build_104395_steps.json  build_104417_steps.json  builder18_build3394.json  log_230713_tail.json  step_525471_logs.json
calendar-cli/: README.md  default.nix  pyproject.toml  types-icalendar.nix
calendar-cli/calendar_cli/: __init__.py  cache.py  config.py  create.py  email_invite.py  errors.py  import_invite.py  main.py  models.py  parse.py  reply.py  store.py  timeutil.py  util.py
calendar-cli/tests/: conftest.py  helpers.py  test_cache.py  test_cli.py  test_import.py  test_invite.py  test_reply.py  test_store.py
context7-cli/: README.md  context7_cli.py  default.nix  pyproject.toml
context7-cli/skill/: SKILL.md
db-cli/: README.md  default.nix  package.json
db-cli/lib/: bahn-url-builder.mjs  index.mjs  journey-display.mjs  station-search.mjs  time-parser.mjs
db-cli/skill/: SKILL.md
firefox-extensions/: default.nix
gmaps-cli/: README.md  default.nix  gmaps_cli.py
gmaps-cli/skill/: SKILL.md
kagi/: README.md  default.nix  pyproject.toml
kagi-search/: README.md  kagi_search.py
kagi/kagi/: __init__.py  __main__.py  _auth.py  _text.py  cli.py  search.py  summarize.py
kagi/skill/: SKILL.md
kagi/tests/: test_search.py  test_text.py
n8n-cli/: README.md  default.nix  pyproject.toml
n8n-cli/n8n_cli/: __init__.py  client.py  config.py  errors.py  main.py  output.py  strip.py
n8n-cli/n8n_cli/commands/: apply.py  credential.py  datatable.py  execution.py  import_wf.py  raw.py  tag.py  test_wf.py  workflow.py
n8n-cli/skill/: SKILL.md
n8n-cli/tests/: conftest.py  test_apply.py  test_credential.py  test_datatable.py  test_errors.py  test_execution.py  test_help.py  test_import.py  test_integration.py  test_raw.py  test_tag.py  test_test_command.py  test_workflow.py
nix/: home-manager.nix  home-modules.nix  packages.nix  skills.nix  treefmt.nix
pexpect-cli/: README.md  default.nix  pyproject.toml
screenshot-cli/: README.md  default.nix  pyproject.toml  screenshot_cli.py  test_screenshot_cli.py
screenshot-cli/skill/: SKILL.md
skills/browser-cli/: SKILL.md
skills/calendar-cli/: EMAIL_INVITES.md  SKILL.md
skills/context7-cli/: SKILL.md
skills/db-cli/: SKILL.md
skills/kagi-search/: SKILL.md
skills/n8n-cli/: SKILL.md
skills/pexpect-cli/: SKILL.md
skills/screenshot-cli/: SKILL.md
skills/tasker-cli/: SKILL.md
skills/weather-cli/: SKILL.md
tasker-cli/: README.md  default.nix  pyproject.toml
tasker-cli/lib/tasker_cli/: adb.py  config.py  main.py  specs.py  webui.py
tasker-cli/skill/: SKILL.md
tasker-cli/tests/: conftest.py  test_deploy.py  test_specs.py
tasker-cli/tests/fixtures/: action_specs.json  arg_specs.json  category_specs.json  session_append.json  session_deploy.json  session_replace.json
weather-cli/: README.md  default.nix  pyproject.toml
