[project]
name = "calendar-cli"
version = "1.0.0"
description = "CLI tool for managing local vdirsyncer calendars"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Joerg Thalheim", email = "joerg@thalheim.io" }]
dependencies = [
    "icalendar>=6.0.0",
    "python-dateutil>=2.8.0",
]

[project.scripts]
calendar-cli = "calendar_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["calendar_cli"]

[tool.pytest.ini_options]
# Make tests/ importable so test modules can share helpers via conftest.
pythonpath = ["tests"]
addopts = "-n auto"

