[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "context7-cli"
version = "0.1.0"
description = "CLI for Context7 library documentation API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
context7-cli = "context7_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["context7_cli.py"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
