[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kagi"
version = "0.3.0"
description = "Multi-verb CLI for Kagi (search + summarize)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
kagi = "kagi.cli:main"
kagi-search = "kagi.cli:search_entry"
kagi-summarize = "kagi.cli:summarize_entry"

[tool.hatch.build.targets.wheel]
packages = ["kagi"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
