[project]
name = "tasker-cli"
version = "1.0.0"
description = "CLI tool to deploy and trigger Tasker tasks via WebUI API and adb"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = []

[project.scripts]
tasker-cli = "tasker_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib/tasker_cli"]
